@@ -690,7 +690,7 @@ def dir_config(target, idefault=nil, ldefault=nil)
     ldirs.concat(defaults.collect {|dir| dir + "/lib"})
     ldir = ([ldir] + ldirs).compact.join(File::PATH_SEPARATOR)
   end
-  $LIBPATH |= ldirs
+  $LIBPATH = ldirs | $LIBPATH
 
   [idir, ldir]
 end
@@ -1022,8 +1022,7 @@ def init_mkmf(config = CONFIG)
   $LIBRUBYARG = ""
   $LIBRUBYARG_STATIC = config['LIBRUBYARG_STATIC']
   $LIBRUBYARG_SHARED = config['LIBRUBYARG_SHARED']
-  $LIBPATH = CROSS_COMPILING ? [] : ["$(libdir)"]
-  $LIBPATH.unshift("$(topdir)") if $extmk or CROSS_COMPILING
+  $LIBPATH = $extmk ? ["$(topdir)"] : CROSS_COMPILING ? [] : ["$(libdir)"]
   $INSTALLFILES = nil
 
   $objs = nil
